git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3129 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
+++ b/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
@@ -458,8 +458,12 @@
   </head>
   <body class="composite">
     <div id="banner">
-      #banner( $decoration.bannerLeft "bannerLeft" )
-      #banner( $decoration.bannerRight "bannerRight" )
+      <span id="bannertop">
+       Open Source Administrative Software
+      </span>
+      <span id="bannerbottom">
+       By higher education, for higher education.
+      </span>
       <div class="clear">
         <hr/>
       </div>
