Styling from Kuali Days 2011
git-svn-id: https://svn.kuali.org/repos/foundation/pom/trunk@3133 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/parent/src/site/resources/css/site.css
+++ b/parent/src/site/resources/css/site.css
@@ -37,5 +37,13 @@
 }
 
 #footer .xright a {
-	display:none;
+  display:none;
+}
+
+.section h2 {
+}
+.section h3 {
+  color:#fff;
+  background-color:#696969;
+  background-image:none;
 }
