--- a/parent/src/site/resources/css/site.css
+++ b/parent/src/site/resources/css/site.css
@@ -34,16 +34,27 @@
 
 #breadcrumbs .xright {
   color: #fff;
+  padding-top:5px;
+}
+
+table.bodyTable th {
+#  background-color: #878787;
+}
+
+#footer {
+  padding: 10px;
+  margin: 20px 0px 20px 0px;
+  border-top: solid #696969 1px;
+  color: #000;
 }
 
 #footer .xright a {
   display:none;
 }
 
-.section h2 {
-}
 .section h3 {
   color:#fff;
   background-color:#696969;
   background-image:none;
 }
+
