git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3176 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-kuali-skin/src/main/resources/css/maven-theme.css
+++ b/maven-kuali-skin/src/main/resources/css/maven-theme.css
@@ -83,8 +83,8 @@ p {
 }
 #breadcrumbs {
   height: 13px;
+  background-image: url(../images/breadcrumbs.jpg);
   padding: 5px 10px 14px 20px;
-  background-color:#A40000;
 }
 * html #breadcrumbs {
   padding-bottom: 8px;
@@ -166,9 +166,6 @@ table {
 }
 .xright a:hover {
   color: #003300;
-}
-.xrighttop {
-  color: #ffffff;
 }
 #banner {
   height: 93px;
