--- a/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
+++ b/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
@@ -428,6 +428,7 @@
     <style type="text/css" media="all">
       @import url("$relativePath/css/maven-base.css");
       @import url("$relativePath/css/maven-theme.css");
+      @import url("$relativePath/css/kuali.css");
       @import url("$relativePath/css/site.css");
     </style>
     <link rel="stylesheet" href="$relativePath/css/print.css" type="text/css" media="print" />
@@ -458,19 +459,15 @@
   </head>
   <body class="composite">
     <div id="banner">
-      <span id="bannertop">
-       Open Source Administrative Software
-      </span>
-      <span id="bannerbottom">
-       By higher education, for higher education.
-      </span>
+      #banner( $decoration.bannerLeft "bannerLeft" )
+      #banner( $decoration.bannerRight "bannerRight" )
       <div class="clear">
         <hr/>
       </div>
     </div>
     <div id="breadcrumbs">
       #publishDate( "left" $decoration.publishDate $decoration.version )
-      <div class="xright"><span class="xrighttop">#links( $decoration.body.links )#publishDate( "right" $decoration.publishDate $decoration.version )<span></div>
+      <div class="xright">#links( $decoration.body.links )#publishDate( "right" $decoration.publishDate $decoration.version )</div>
       <div class="clear">
         <hr/>
       </div>
@@ -492,7 +489,7 @@
       <hr/>
     </div>
     <div id="footer">
-      <div class="xright">&#169;#copyright()#publishDate( "bottom" $decoration.publishDate $decoration.version )</div>
+      <div class="xright">&#169;#copyright()#publishDate( "bottom" $decoration.publishDate $decoration.version ) - <a href="http://maven.apache.org/privacy-policy.html">Privacy Policy</a></div>
       <div class="clear">
         <hr/>
       </div>
