git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3186 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-kuali-skin/src/main/resources/css/kuali.css
+++ b/maven-kuali-skin/src/main/resources/css/kuali.css
@@ -21,6 +21,7 @@
   display:block;
   padding-top:3px;
   font-size: 1.5em;
+  font-weight: 100; 
   color: #b3b3b3;
   font-style: italic;
   font-family: Georgia, serif;
