--- a/maven-kuali-skin/src/main/resources/css/kuali.css
+++ b/maven-kuali-skin/src/main/resources/css/kuali.css
@@ -59,3 +59,24 @@ table.bodyTable th {
   background-image:none;
 }
 
+a.poweredBy {
+ text-align:center;
+ display:block;
+ border:1px solid white;
+ margin-bottom:5px;
+ padding:0px;
+ padding-bottom:5px;
+}
+
+a.poweredBy:hover {
+ border:1px solid #ccc;
+}
+
+img.poweredBy {
+ border:0px;
+ margin:0px;
+}
+
+#navcolumn {
+ border:1px solid white;
+}
