Always print the Kuali Foundation logo.  Ignore the image specified in the img attribute since the maven-site-plugin (3.0 and 3.0-beta-3) both screw up the image pathing in weird ways
git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3206 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
+++ b/maven-kuali-skin/src/main/resources/META-INF/maven/site.vm
@@ -374,8 +374,10 @@
 ##
       #if( $item.img )
         #set ( $img = $item.img )
+        #set ( $img = "images/kuali/logo.png" )
       #else
         #set ( $img = "images/logos/maven-feather.png" )
+        #set ( $img = "images/kuali/logo.png" )
       #end
 ##
       #if ( ! ( $img.toLowerCase().startsWith("http") || $img.toLowerCase().startsWith("https") ) )
