git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3540 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple-properties.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple-properties.xml
@@ -2,4 +2,18 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
   <comment>Properties specific to the "simple" template</comment>
+  <entry key="jenkins.job.scm.xml.svn"><![CDATA[<scm class="hudson.scm.SubversionSCM">
+    <locations>
+      <hudson.scm.SubversionSCM_-ModuleLocation>
+        <remote>${jenkins.project.scm.url}</remote>
+        <local>.</local>
+      </hudson.scm.SubversionSCM_-ModuleLocation>
+    </locations>
+    <excludedRegions></excludedRegions>
+    <includedRegions></includedRegions>
+    <excludedUsers></excludedUsers>
+    <excludedRevprop></excludedRevprop>
+    <excludedCommitMessages></excludedCommitMessages>
+    <workspaceUpdater class="hudson.scm.subversion.UpdateUpdater" />
+  </scm>]]></entry>
 </properties>
