--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/common-properties.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/common-properties.xml
@@ -2,13 +2,11 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
   <comment>Properties common to all Jenkins jobs</comment>
-  <entry key="jenkins.job.description.xml"><![CDATA[<description>
-    &lt;li&gt;${jenkins.job.description}&lt;/li&gt;
-    &lt;br&gt;
-    &lt;li&gt;${jenkins.project.groupId}:${jenkins.project.artifactId}:${jenkins.project.majorVersion}&lt;/li&gt;
-    &lt;li&gt;${jenkins.project.scm.url}&lt;/li&gt;
-    &lt;br&gt;
-    &lt;li&gt;Job created by Maven Jenkins CLI Wrapper ${project.version} (Jenkins CLI Version ${jenkins.cli.version})&lt;/li&gt;
-    &lt;li&gt;Last config update via CLI - ${jenkins.build.timestamp}&lt;/li&gt; 
-  </description>]]></entry>
+  <entry key="jenkins.job.description"><![CDATA[<li>${jenkins.job.description.short}</li>
+    <br>
+    <li>${jenkins.project.groupId}:${jenkins.project.artifactId}:${jenkins.project.majorVersion}</li>
+    <li>${jenkins.project.scm.url}</li>
+    <br>
+    <li>Job created by Maven Jenkins CLI Wrapper ${project.version} (Jenkins CLI Version ${jenkins.cli.version})</li>
+    <li>Last config update via CLI - ${jenkins.build.timestamp}</li>]]></entry>
 </properties>
