--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple.xml
@@ -1,7 +1,9 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <maven2-moduleset>
   <actions />
-  ${jenkins.job.description.xml}
+  <description>
+    <![CDATA[${jenkins.job.description}]]>
+  </description>
   <logRotator>
     <daysToKeep>-1</daysToKeep>
     <numToKeep>3</numToKeep>
