git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3555 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/common-properties.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/common-properties.xml
@@ -2,7 +2,8 @@
 <!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
   <comment>Properties common to all Jenkins jobs</comment>
-  <entry key="jenkins.job.description"><![CDATA[<li>${jenkins.job.description.short}</li>
+  <entry key="jenkins.job.actions"></entry>
+  <entry key="jenkins.job.description"><![CDATA[${jenkins.job.description.short}
     <br>
     <li>${jenkins.project.groupId}:${jenkins.project.artifactId}:${jenkins.project.majorVersion}</li>
     <li>${jenkins.project.scm.url}</li>
