--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple.xml
@@ -1,6 +1,8 @@
-<?xml version='1.0' encoding='UTF-8'?>
+<?xml version="1.0" encoding="UTF-8"?>
 <maven2-moduleset>
-  <actions />
+  <actions>
+    <![CDATA[${jenkins.job.actions}]]>
+  </actions>
   <description>
     <![CDATA[${jenkins.job.description}]]>
   </description>
