git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3559 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/svn-properties.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/svn-properties.xml
@@ -4,10 +4,7 @@
   <comment>Properties specific to Jenkins jobs that interact with Subversion</comment>
   <entry key="jenkins.job.scm.class">hudson.scm.SubversionSCM</entry>
   <entry key="jenkins.job.scm.xml"><![CDATA[<locations>
-      <hudson.scm.SubversionSCM_-ModuleLocation>
-        <remote>${jenkins.project.scm.url}</remote>
-        <local>.</local>
-      </hudson.scm.SubversionSCM_-ModuleLocation>
+    ${jenkins.job.svn.locations}
     </locations>
     <excludedRegions></excludedRegions>
     <includedRegions></includedRegions>
@@ -15,4 +12,9 @@
     <excludedRevprop></excludedRevprop>
     <excludedCommitMessages></excludedCommitMessages>
     <workspaceUpdater class="hudson.scm.subversion.UpdateUpdater" />]]></entry>
+  <entry key="jenkins.job.svn.locations"><![CDATA[<hudson.scm.SubversionSCM_-ModuleLocation>
+        <remote>${jenkins.project.scm.url}</remote>
+        <local>${jenkins.job.svn.local}</local>
+      </hudson.scm.SubversionSCM_-ModuleLocation>]]></entry>
+  <entry key="jenkins.job.svn.local">.</entry>
 </properties>
