--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple.xml
@@ -24,7 +24,7 @@
   <blockBuildWhenDownstreamBuilding>${jenkins.job.blockBuildWhenDownstreamBuilding}</blockBuildWhenDownstreamBuilding>
   <blockBuildWhenUpstreamBuilding>${jenkins.job.blockBuildWhenUpstreamBuilding}</blockBuildWhenUpstreamBuilding>
   <triggers class="${jenkins.job.triggers.class}">
-    <![CDATA[${jenkins.job.triggers}]]>
+    ${jenkins.job.triggers}
   </triggers>
   <concurrentBuild>${jenkins.job.concurrentBuild}</concurrentBuild>
   <rootModule>
