git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3564 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/common-properties.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/common-properties.xml
@@ -47,16 +47,12 @@
   <entry key="jenkins.job.runHeadless">false</entry>
   <entry key="jenkins.job.settingConfigId"></entry>
   <entry key="jenkins.job.globalSettingConfigId"></entry>
-</properties>
-
-
-<reporters />
-<publishers />
-<buildWrappers />
-<prebuilders />
-<postbuilders />
-<runPostStepsIfResult>
-  <name>FAILURE</name>
+  <entry key="jenkins.job.reporters"></entry>
+  <entry key="jenkins.job.publishers"></entry>
+  <entry key="jenkins.job.buildWrappers"></entry>
+  <entry key="jenkins.job.prebuilders"></entry>
+  <entry key="jenkins.job.postbuilders"></entry>
+  <entry key="jenkins.job.runPostStepsIfResult"><![CDATA[  <name>FAILURE</name>
   <ordinal>2</ordinal>
-  <color>RED</color>
-</runPostStepsIfResult>
+  <color>RED</color>]]></entry>
+</properties>
