git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3566 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/simple.xml
@@ -59,8 +59,6 @@
     ${jenkins.job.postbuilders}
   </postbuilders>
   <runPostStepsIfResult>
-    <name>FAILURE</name>
-    <ordinal>2</ordinal>
-    <color>RED</color>
+    ${jenkins.job.runPostStepsIfResult}
   </runPostStepsIfResult>
 </maven2-moduleset>
