git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3570 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/template.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/template.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <maven2-moduleset>
-  <actions>
-    ${jenkins.job.actions}
-  </actions>
+  <actions>${jenkins.job.actions}</actions>
   <description>
     <![CDATA[${jenkins.job.description}]]>
   </description>
@@ -13,9 +11,7 @@
     <artifactNumToKeep>${jenkins.job.artifactNumToKeep}</artifactNumToKeep>
   </logRotator>
   <keepDependencies>${jenkins.job.keepDependencies}</keepDependencies>
-  <properties>
-    ${jenkins.job.properties}
-  </properties>
+  <properties>${jenkins.job.properties}</properties>
   <scm class="${jenkins.job.scm.class}">
     ${jenkins.job.scm.xml}
   </scm>
@@ -43,22 +39,10 @@
   <runHeadless>${jenkins.job.runHeadless}</runHeadless>
   <settingConfigId>${jenkins.job.settingConfigId}</settingConfigId>
   <globalSettingConfigId>${jenkins.job.globalSettingConfigId}</globalSettingConfigId>
-  <reporters>
-    ${jenkins.job.reporters}
-  </reporters>
-  <publishers>
-    ${jenkins.job.publishers}
-  </publishers>
-  <buildWrappers>
-    ${jenkins.job.buildWrappers}
-  </buildWrappers>
-  <prebuilders>
-    ${jenkins.job.prebuilders}
-  </prebuilders>
-  <postbuilders>
-    ${jenkins.job.postbuilders}
-  </postbuilders>
-  <runPostStepsIfResult>
-    ${jenkins.job.runPostStepsIfResult}
-  </runPostStepsIfResult>
+  <reporters>${jenkins.job.reporters}</reporters>
+  <publishers>${jenkins.job.publishers}</publishers>
+  <buildWrappers>${jenkins.job.buildWrappers}</buildWrappers>
+  <prebuilders>${jenkins.job.prebuilders}</prebuilders>
+  <postbuilders>${jenkins.job.postbuilders}</postbuilders>
+  <runPostStepsIfResult>${jenkins.job.runPostStepsIfResult}</runPostStepsIfResult>
 </maven2-moduleset>
