git-svn-id: https://svn.kuali.org/repos/foundation/trunk@3571 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/template.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/template.xml
@@ -19,9 +19,7 @@
   <disabled>${jenkins.job.disabled}</disabled>
   <blockBuildWhenDownstreamBuilding>${jenkins.job.blockBuildWhenDownstreamBuilding}</blockBuildWhenDownstreamBuilding>
   <blockBuildWhenUpstreamBuilding>${jenkins.job.blockBuildWhenUpstreamBuilding}</blockBuildWhenUpstreamBuilding>
-  <triggers class="${jenkins.job.triggers.class}">
-    ${jenkins.job.triggers}
-  </triggers>
+  <triggers class="${jenkins.job.triggers.class}">${jenkins.job.triggers}</triggers>
   <concurrentBuild>${jenkins.job.concurrentBuild}</concurrentBuild>
   <rootModule>
     <groupId>${jenkins.project.groupId}</groupId>
