--- a/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/properties.xml
+++ b/cm-tools/src/main/resources/org/kuali/cm/jenkins/jobs/templates/properties.xml
@@ -52,7 +52,9 @@
   <entry key="jenkins.job.buildWrappers"></entry>
   <entry key="jenkins.job.prebuilders"></entry>
   <entry key="jenkins.job.postbuilders"></entry>
-  <entry key="jenkins.job.runPostStepsIfResult"><![CDATA[<name>FAILURE</name>
-  <ordinal>2</ordinal>
-  <color>RED</color>]]></entry>
+  <entry key="jenkins.job.runPostStepsIfResult"><![CDATA[
+    <name>FAILURE</name>
+    <ordinal>2</ordinal>
+    <color>RED</color>
+  ]]></entry>
 </properties>
