--- a/jenkins-maven-plugin/src/main/resources/org/kuali/cm/jenkins/jobs/templates/jenkins.xml
+++ b/jenkins-maven-plugin/src/main/resources/org/kuali/cm/jenkins/jobs/templates/jenkins.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
+<!-- This is a template for the XML representation of a Jenkins job -->
 <maven2-moduleset>
   <actions>${jenkins.job.actions}</actions>
   <description><![CDATA[${jenkins.job.description}]]></description>
